[workspace]

members = [
    "recast-nav-atl",
    "recast-nav-atl-sys"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [ "Rirurin" ]
categories = [ "games" ]
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/recast-navigation-atl"
license-file = "LICENSE"
edition = "2021"