[package]
name = "recast-nav-atl-sys"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]

[build-dependencies]
bindgen = "0.72"
cc = "1.2.22"
walkdir = "2.5.0"