[package]
name = "recast-nav-atl-sys"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
byteorder = { version = "1.5.0", optional = true }
rkyv = { version = "0.8.10", optional = true }

[build-dependencies]
bindgen = "0.72"
cc = "1.2.22"
walkdir = "2.5.0"

[features]
serialize = [ "dep:rkyv", "dep:byteorder" ]